force-app/main/default/objects/AA_Employee_Absence__c/AA_Employee_Absence__c.object-meta.xml
<CustomObject>
    <label>AA Employee Absence</label>
    <nameField>
        <displayFormat>EA-{0000}</displayFormat>
        <label>AA Employee Absence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AA Employee Absence</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>