force-app/main/default/objects/AA_Employee_Absence__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sick</fullName>
            </value>
            <value>
                <fullName>Leave</fullName>
            </value>
            <value>
                <fullName>Break</fullName>
            </value>
            <value>
                <fullName>Rescheduled Break</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>