force-app/main/default/objects/AA_Employee_Absence__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <label>Start Date Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>